namespace-guestbook-ab-test-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    shared-gateway-access: "true"
  name: guestbook-ab-test-a
