namespace-guestbook-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    shared-gateway-access: "true"
  name: guestbook-dev
