namespace-guestbook-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    shared-gateway-access: "true"
  name: guestbook-staging
