guestbook-dev-deployment-guestbook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  namespace: guestbook-dev
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - env:
        - name: RESPONSE_FORMAT
          value: json
        - name: CONTENT_TYPE
          value: application/json
        - name: ENABLE_JSON_RESPONSE
          value: "true"
        image: ghcr.io/juhisxd/guestbook:v1.0.0
        name: guestbook
        ports:
        - containerPort: 3000
          name: http
