guestbook-prod-deployment-guestbook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  namespace: guestbook-prod
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - image: ghcr.io/juhisxd/guestbook:v1.2.0
        name: guestbook
        ports:
        - containerPort: 3000
          name: http
