guestbook-dev-service-guestbook.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  namespace: guestbook-dev
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: guestbooks
