guestbook-ab-test-a-httproute-guestbook-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: guestbook-route
  namespace: guestbook-ab-test-a
spec:
  hostnames:
  - ab-test-a.guestbook.juho.relex.software
  parentRefs:
  - name: guestbook
    namespace: nginx-gateway
  rules:
  - backendRefs:
    - kind: Service
      name: guestbook
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
